tests/ui/formatter/fail/unsupported_formatter.rs
// SPDX-FileCopyrightText: 2025 RAprogramm <andrey.rozanov.vl@gmail.com>
//
// SPDX-License-Identifier: MIT

use masterror::Error;

#[derive(Debug, Error)]
#[error("{value:y}")]
struct UnsupportedFormatter {
    value: u32,
}

fn main() {}
