tests/ui/formatter/fail/unsupported_formatter.stderr
error: placeholder spanning bytes 0..9 uses an unsupported formatter
 --> tests/ui/formatter/fail/unsupported_formatter.rs:8:9
  |
8 | #[error("{value:y}")]
  |         ^^^^^^^^^^^
